--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -1,155 +1,118 @@
 /*
-	Helios by HTML5 UP
+	Tessellate by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
 /* Basic */
 
-	a {
-		border-bottom: solid 1px #ddd;
+	.image {
+		position: relative;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
 	}
 
-	hr {
-		border-top: solid 1px #777;
-		border-bottom: solid 1px #777;
-	}
+		.image img {
+			position: relative;
+			-ms-behavior: url("assets/js/ie/PIE.htc");
+		}
 
-	.timestamp {
-		color: #777;
+	.button {
+		position: relative;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
 	}
 
 /* Section/Article */
 
-	section > .last-child, section.last-child, article > .last-child, article.last-child {
+	section > .last-child,
+	article > .last-child,
+	section.last-child,
+	article.last-child {
 		margin-bottom: 0;
 	}
 
 /* List */
 
-	ul.divided li {
-		border-top: solid 1px #777;
-	}
-
-	ul.menu li {
-		border-left: solid 1px #777;
-	}
-
-	ul.icons {
-		background: #333;
+	ul.icons a {
+		position: relative;
 		-ms-behavior: url("assets/js/ie/PIE.htc");
+		border: solid 1px #ddd;
+	}
+
+/* Form */
+
+	form input.text,
+	form select,
+	form .select,
+	form textarea {
+		position: relative;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
+		border: solid 1px #ddd;
+		line-height: 1.25em;
+	}
+
+	form select {
+		position: relative;
+	}
+
+		form select option {
+			color: #000;
+		}
+
+	form .select select {
+		width: 100%;
+	}
+
+	form .select:before {
+		display: none;
 	}
 
 /* Button */
 
-	.button {
-		-ms-behavior: url("assets/js/ie/PIE.htc");
+	.button.alt {
+		border: solid 1px #ddd;
 	}
 
-/* Icons */
+/* Feature Icon */
 
-	.icon.circled {
-		-ms-behavior: url("assets/js/ie/PIE.htc");
+	.feature-icon {
+		padding-bottom: 0;
 	}
+
+		.feature-icon:before, .feature-icon:after {
+			display: none;
+		}
+
+		.feature-icon .icon {
+			position: relative;
+			-ms-behavior: url("assets/js/ie/PIE.htc");
+			background: #fff;
+		}
+
+			.feature-icon .icon:before {
+				font-size: 6em;
+				color: #3d3d3d;
+			}
 
 /* Header */
 
 	#header {
+		background-image: url("../../images/header.jpg");
+		background-size: cover;
+		background-position: auto;
+		background-repeat: no-repeat;
 		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
 	}
 
-	body.homepage #header {
-		height: auto;
-		min-height: 0;
-		padding: 12em 0 12em 0;
+/* Main Sections */
+
+	.main > .content.style1 {
+		filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#412e4c, endColorstr=#a56365);
 	}
 
-		body.homepage #header:after {
-			display: none;
-		}
-
-/* Nav */
-
-	#nav > ul:before, #nav > ul:after {
-		border-top: solid 1px #777;
-		border-bottom: solid 1px #777;
+	.main > .content.style2 {
+		filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#85505f, endColorstr=#384955);
 	}
 
-	#nav > ul > li {
-		-ms-behavior: url("assets/js/ie/PIE.htc");
+	.main > .content.style3 {
+		filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#2f394e, endColorstr=#5f796b);
 	}
-
-		#nav > ul > li.active {
-			border-color: #999;
-		}
-
-	.dropotron {
-		background: #fff;
-		-ms-behavior: url("assets/js/ie/PIE.htc");
-	}
-
-		.dropotron li {
-			border-color: #eee;
-			padding-right: 1em;
-			color: #5b5b5b;
-		}
-
-		.dropotron.level-0 {
-			box-shadow: none !important;
-			margin-top: 1em;
-		}
-
-/* Carousel */
-
-	.carousel .forward, .carousel .backward {
-		border-radius: 100%;
-		background-color: #483949;
-		width: 7em;
-		height: 7em;
-		margin-top: -3.5em;
-		border-radius: 100%;
-		-ms-behavior: url("assets/js/ie/PIE.htc");
-	}
-
-		.carousel .forward:before, .carousel .backward:before {
-			display: none;
-		}
-
-	.carousel .forward {
-		right: -3.5em;
-	}
-
-	.carousel .backward {
-		left: -3.5em;
-	}
-
-/* Footer */
-
-	#footer ul.divided li {
-		border-color: #3B373C;
-	}
-
-	#footer ul.menu li {
-		border-color: #3B373C;
-	}
-
-	#footer hr {
-		border-color: #3B373C;
-	}
-
-	#footer .icons {
-		background: #2F2930;
-	}
-
-	#footer .copyright {
-		color: #777;
-	}
-
-		#footer .copyright a {
-			color: #aaa;
-			border: 0;
-		}
-
-			#footer .copyright a:hover {
-				color: #ccc;
-			}
